name:                haggis
version:             0.1.0.0
synopsis:            A static site generator with blogging/comments support
homepage:            http://tycho.ws
license:             MIT
license-file:        LICENSE
author:              Tycho Andersen
maintainer:          Tycho Andersen <tycho@tycho.ws>
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends: base ==4.*, filemanip >= 0.3, filepath >= 1.3,
                 directory >= 1.1, unix >= 2.5, bytestring >= 0.9,
                 blaze-builder >= 0.3, pandoc >= 1.10, xmlhtml >= 0.2
  hs-source-dirs: src
  exposed-modules: Text.Haggis, Text.Haggis.Parse
  ghc-options: -Wall

executable haggis
  main-is: haggis.hs
  hs-source-dirs: tools
  build-depends: base ==4.*, filemanip >= 0.3, filepath >= 1.3,
                 optparse-applicative >= 0.5, directory >= 1.1,
                 haggis >= 0.1.0.0
  ghc-options: -Wall
